--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,33 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.main-section .search-container {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.main-section .search-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search-container .search-button {
+  color: #757575;
+  background-color: #f5f5f5;
+  border: none;
+  height: 36px;
+  width: 125px;
+  border-radius: 1px;
+  font-size: 13px;
+  font-weight: bold;
+  margin-top: 20px;
+  cursor: pointer;
+  outline: none;
+}
+
+
+
+
+
