--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,27 @@ body {
   outline: none;
 }
 
+.main-section .search-container .search-box {
+  border: none;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  outline: none;
+  height: 44px;
+  border-radius: 2px;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: 16px;
+  width: 70%;
+  max-width: 630px;
+  color: #000;
+}
 
+.main-section .logo-container {
+  width: 220px;
+  text-align: center;
+}
 
+.logo-container img {
+  width: 100%;
+}
 
 
