--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,4 +73,26 @@ body {
   width: 100%;
 }
 
+.header {
+  background-color: #fafafa;
+  border-bottom: 1px solid #ebebeb;
+}
 
+.wrapper .header-content {
+  display: flex;
+  align-items: center;
+}
+
+.header-content .logo-container {
+  width: 150px;
+  padding: 5px 20px;
+  box-sizing: border-box;
+}
+
+.header-content .search-container {
+  flex: 1;
+}
+
+.header-content .search-container form { 
+  margin: 15px 0 28px 0;
+}
