add tabs to search page and style them

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,3 +121,32 @@ body {
 .search-box button {
   border: none;
 }
+
+.tabs-container {
+  margin-left: 150px;
+}
+
+.tabs-container .tab-list {
+  padding: 0;
+  margin: 0;
+}
+
+.tabs-container .tab-list li {
+  display: inline-block;
+  padding: 0 16px 12px 16px;
+  color: #777;
+  font-size: 13px;
+}
+
+.tabs-container .tab-list li a {
+  text-decoration: none;
+}
+
+.tabs-container .tab-list li.active {
+  border-bottom: 3px solid #1A73E8;
+}
+
+.tabs-container .tab-list li.active a {
+  font-weight: bold;
+  color: #1A73E8;
+}
